2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/exitfail, modules/fatal, modules/obstack,
	modules/xgethostname, modules/xalloc: Depend on exit.

2003-09-09  Paul Eggert  <eggert@twinsun.com>

	* README: New section: portability guidelines.

2003-09-07  Paul Eggert  <eggert@twinsun.com>

	* modules/time_r: Depend on 'restrict'.  Fix from Simon Josefsson in
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-09/msg00028.html>.

2003-09-06  Paul Eggert  <eggert@twinsun.com>

	* MODULES.html.sh (func_all_modules): Add time_r.
	* modules/time_r: New file.
	* modules/mktime, modules/strftime, modules/timegm: Depend on time_r.
	* modules/timegm: Depend on mktime.  Change maintainer to "all, glibc".

2003-08-31  Simon Josefsson  <jas@extundo.com>

	* modules/timegm: New file.
	* MODULES.html.sh (func_all_modules): Add timegm.

2003-08-22  Simon Josefsson  <jas@extundo.com>

	* modules/strndup (Makefile.am): Add strndup.h to lib_SOURCES.

2003-08-20  Bruno Haible  <bruno@clisp.org>

	* modules/progname: New file.
	* MODULES.html.sh (func_all_modules): Add progname.

2003-08-18  Paul Eggert  <eggert@twinsun.com>

	* modules/stdbool: Add BUILT_SOURCES.  Prefer $@ to target name
        in makefile rules.

2003-08-17  Simon Josefsson  <jas@extundo.com>

	* modules/argp: Fix autoconf macro name. Add more dependencies.

2003-08-17  Simon Josefsson  <jas@extundo.com>

	* modules/xstrndup: New file.
	* MODULES.html.sh (func_all_modules): Add xstrndup.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* modules/strndup (Files, Include): Add lib/strndup.h.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Handle gl_USE_SYSTEM_EXTENSIONS
	like AC_GNU_SOURCE.
	* modules/extensions (configure.ac): Comment out the invocation of
	gl_USE_SYSTEM_EXTENSIONS.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* modules/euidaccess (Files): Add lib/euidaccess.h.

2003-08-16  Paul Eggert  <eggert@twinsun.com>
