@@ -1,3 +1,8 @@
+2003-09-14  Bruno Haible  <bruno@clisp.org>
+
+	* fwriteerror.h: New file.
+	* fwriteerror.c: New file.
+
 2003-09-14  Jim Meyering  <jim@meyering.net>
 
 	* getloadavg.c: Correct cpp indentation.
