@@ -1,3 +1,8 @@
+2003-09-14  Bruno Haible  <bruno@clisp.org>
+
+	* modules/fwriteerror: New file.
+	* MODULES.html.sh (func_all_modules): Add fwriteerror.
+
 2003-09-12  Paul Eggert  <eggert@twinsun.com>
 
 	* modules/argmatch, modules/exitfail, modules/fatal, modules/obstack,
